data/derived/comb/progs/unify/prog5808.ml.out
Characters 84-85:
  carry @ a in
          ^
Error: This expression has type 'a list * 'b
       but an expression was expected of type 'a list
